Fixes misallignment of table when server name is too long

--- a/caas-web/src/main/resources/public/css/table.css
+++ b/caas-web/src/main/resources/public/css/table.css
@@ -109,6 +109,7 @@ th, td {
 }
 
 .fixed-table-container td:first-child {
+    white-space: nowrap;
     background: #eee;
 }
 
